--- a/src/content/locale/he/guides/practical/best-practices.json
+++ b/src/content/locale/he/guides/practical/best-practices.json
@@ -8,7 +8,13 @@
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
     "icon": "IconChecklist",
-    "tags": ["best-practices", "טיפים", "איכות", "יעילות", "ארגון"],
+    "tags": [
+      "best-practices",
+      "טיפים",
+      "איכות",
+      "יעילות",
+      "ארגון"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -115,14 +121,49 @@
     },
     {
       "type": "table",
-      "headers": ["היבט", "שימוש רגיל", "שימוש מקצועי", "תוצאה"],
+      "headers": [
+        "היבט",
+        "שימוש רגיל",
+        "שימוש מקצועי",
+        "תוצאה"
+      ],
       "rows": [
-        ["תכנון", "קופצים ישר לקוד", "מתחילים בתכנון", "פחות באגים"],
-        ["Context", "מידע חלקי", "Context מלא", "תוצאות טובות יותר"],
-        ["תיעוד", "מתעדים בסוף", "מתעדים תוך כדי", "תיעוד שלם"],
-        ["Code Review", "לפעמים", "תמיד", "איכות גבוהה"],
-        ["וורקפלואים", "רק הנדרשים", "תהליך מלא", "עקביות"],
-        ["צוות", "כל אחד בנפרד", "עבודה משותפת", "סינרגיה"]
+        [
+          "תכנון",
+          "קופצים ישר לקוד",
+          "מתחילים בתכנון",
+          "פחות באגים"
+        ],
+        [
+          "Context",
+          "מידע חלקי",
+          "Context מלא",
+          "תוצאות טובות יותר"
+        ],
+        [
+          "תיעוד",
+          "מתעדים בסוף",
+          "מתעדים תוך כדי",
+          "תיעוד שלם"
+        ],
+        [
+          "Code Review",
+          "לפעמים",
+          "תמיד",
+          "איכות גבוהה"
+        ],
+        [
+          "וורקפלואים",
+          "רק הנדרשים",
+          "תהליך מלא",
+          "עקביות"
+        ],
+        [
+          "צוות",
+          "כל אחד בנפרד",
+          "עבודה משותפת",
+          "סינרגיה"
+        ]
       ]
     },
     {
@@ -187,7 +228,8 @@
       "type": "callout",
       "variant": "warning",
       "title": "הטעות הכי נפוצה",
-      "content": "**90% מהמתחילים קופצים ישר לקוד.** התוצאה: ארכיטקטורה לא טובה, רה-רייט, technical debt, ושעות של תיקונים. תשקיעו בתכנון!"
+      "content": "**90% מהמתחילים קופצים ישר לקוד.** התוצאה: ארכיטקטורה לא טובה, רה-רייט, technical debt, ושעות של תיקונים. תשקיעו בתכנון!",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -232,7 +274,8 @@
       "items": [
         {
           "title": "כשכותבים קוד → הוסיפו הערות",
-          "content": "הוסיפו הערות לקוד מורכב **תוך כדי כתיבה**. אחרי שבוע לא תזכרו למה כתבתם את זה."
+          "content": "הוסיפו הערות לקוד מורכב **תוך כדי כתיבה**. אחרי שבוע לא תזכרו למה כתבתם את זה.",
+          "markdown": true
         },
         {
           "title": "כשמקבלים החלטה → תעדו אותה",
@@ -244,7 +287,8 @@
         },
         {
           "title": "כשמסיימים Story → עדכנו תיעוד",
-          "content": "לפני `story-done` - וודאו שהתיעוד מעודכן. זה לוקח 5 דקות עכשיו, 2 שעות בעוד חודש."
+          "content": "לפני `story-done` - וודאו שהתיעוד מעודכן. זה לוקח 5 דקות עכשיו, 2 שעות בעוד חודש.",
+          "markdown": true
         }
       ]
     },
@@ -274,7 +318,8 @@
       "type": "callout",
       "variant": "success",
       "title": "סטטיסטיקה מעניינת",
-      "content": "מחקרים מראים ש-Code Review מוצא **60% מהבאגים** לפני הפרודקשן, ומקטין Technical Debt ב-**40%**. 30 דקות Review חוסכות שעות של תיקונים."
+      "content": "מחקרים מראים ש-Code Review מוצא **60% מהבאגים** לפני הפרודקשן, ומקטין Technical Debt ב-**40%**. 30 דקות Review חוסכות שעות של תיקונים.",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -314,14 +359,42 @@
     },
     {
       "type": "table",
-      "headers": ["משימה", "אגנט נכון", "למה?"],
+      "headers": [
+        "משימה",
+        "אגנט נכון",
+        "למה?"
+      ],
       "rows": [
-        ["הגדרת דרישות", "PM", "מומחה בצרכי משתמש"],
-        ["ארכיטקטורה", "Architect", "רואה תמונה גדולה"],
-        ["קוד", "Dev", "יודע את הפרטים הטכניים"],
-        ["בדיקות", "TEA", "חושב כמו tester"],
-        ["עיצוב", "UX Designer", "מבין משתמשים"],
-        ["תיעוד", "Tech Writer", "כותב ברור ומקצועי"]
+        [
+          "הגדרת דרישות",
+          "PM",
+          "מומחה בצרכי משתמש"
+        ],
+        [
+          "ארכיטקטורה",
+          "Architect",
+          "רואה תמונה גדולה"
+        ],
+        [
+          "קוד",
+          "Dev",
+          "יודע את הפרטים הטכניים"
+        ],
+        [
+          "בדיקות",
+          "TEA",
+          "חושב כמו tester"
+        ],
+        [
+          "עיצוב",
+          "UX Designer",
+          "מבין משתמשים"
+        ],
+        [
+          "תיעוד",
+          "Tech Writer",
+          "כותב ברור ומקצועי"
+        ]
       ]
     },
     {
@@ -372,7 +445,8 @@
       "type": "callout",
       "variant": "warning",
       "title": "טעות נפוצה",
-      "content": "**אגנטים לא קוראים מחשבות!** אם לא תגידו להם על PRD או Tech Spec קיים - הם לא ידעו. תמיד תציינו מה כבר קיים ואיפה למצוא אותו."
+      "content": "**אגנטים לא קוראים מחשבות!** אם לא תגידו להם על PRD או Tech Spec קיים - הם לא ידעו. תמיד תציינו מה כבר קיים ואיפה למצוא אותו.",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -427,7 +501,8 @@
       "type": "callout",
       "variant": "info",
       "title": "מתי מותר לדלג?",
-      "content": "**רק במקרים ספציפיים:**\n- Bug קריטי בפרודקשן (hotfix)\n- Story ממש פשוטה (5 שורות קוד)\n- תיקון טיפוגרפי\n\n**כל השאר:** עקבו אחרי התהליך המלא!"
+      "content": "**רק במקרים ספציפיים:**\n- Bug קריטי בפרודקשן (hotfix)\n- Story ממש פשוטה (5 שורות קוד)\n- תיקון טיפוגרפי\n\n**כל השאר:** עקבו אחרי התהליך המלא!",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -511,7 +586,8 @@
       "type": "callout",
       "variant": "warning",
       "title": "פלט גרוע = בעיות בהמשך",
-      "content": "אם PRD לא טוב, Tech Spec יהיה גרוע, Architecture תהיה מבולגנת, והקוד יהיה באג-פסט. **תקנו בהתחלה, לא בסוף!**"
+      "content": "אם PRD לא טוב, Tech Spec יהיה גרוע, Architecture תהיה מבולגנת, והקוד יהיה באג-פסט. **תקנו בהתחלה, לא בסוף!**",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -590,13 +666,37 @@
     },
     {
       "type": "table",
-      "headers": ["תפקיד", "אחראי על", "לא אחראי על"],
+      "headers": [
+        "תפקיד",
+        "אחראי על",
+        "לא אחראי על"
+      ],
       "rows": [
-        ["PM", "PRD, Epics, Stories", "Code, Architecture"],
-        ["Architect", "Tech Spec, Architecture", "UX Design, Code"],
-        ["Dev", "Implementation, Unit Tests", "Architecture, PRD"],
-        ["TEA", "Test Plans, QA", "Development"],
-        ["UX Designer", "Design, User Research", "Backend, Database"]
+        [
+          "PM",
+          "PRD, Epics, Stories",
+          "Code, Architecture"
+        ],
+        [
+          "Architect",
+          "Tech Spec, Architecture",
+          "UX Design, Code"
+        ],
+        [
+          "Dev",
+          "Implementation, Unit Tests",
+          "Architecture, PRD"
+        ],
+        [
+          "TEA",
+          "Test Plans, QA",
+          "Development"
+        ],
+        [
+          "UX Designer",
+          "Design, User Research",
+          "Backend, Database"
+        ]
       ]
     },
     {
@@ -742,7 +842,8 @@
       "type": "callout",
       "variant": "info",
       "title": "למה המבנה הזה טוב?",
-      "content": "**ארגון לפי שלבים** - קל למצוא מסמכים לפי מתי הם נוצרו. **קונסיסטנטי** - כל הפרויקטים נראים אותו הדבר. **Scalable** - עובד גם לפרויקטים גדולים."
+      "content": "**ארגון לפי שלבים** - קל למצוא מסמכים לפי מתי הם נוצרו. **קונסיסטנטי** - כל הפרויקטים נראים אותו הדבר. **Scalable** - עובד גם לפרויקטים גדולים.",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -757,14 +858,42 @@
     },
     {
       "type": "table",
-      "headers": ["סוג מסמך", "פורמט שם", "דוגמה"],
+      "headers": [
+        "סוג מסמך",
+        "פורמט שם",
+        "דוגמה"
+      ],
       "rows": [
-        ["Product Brief", "[project]-product-brief.md", "taskmanager-product-brief.md"],
-        ["PRD", "[project]-prd.md", "taskmanager-prd.md"],
-        ["Tech Spec", "[feature]-tech-spec.md", "realtime-collab-tech-spec.md"],
-        ["Architecture", "[project]-architecture.md", "taskmanager-architecture.md"],
-        ["Story", "[epic-id]-[story-id]-[title].md", "epic1-story3-user-login.md"],
-        ["Test Plan", "[feature]-test-plan.md", "realtime-collab-test-plan.md"]
+        [
+          "Product Brief",
+          "[project]-product-brief.md",
+          "taskmanager-product-brief.md"
+        ],
+        [
+          "PRD",
+          "[project]-prd.md",
+          "taskmanager-prd.md"
+        ],
+        [
+          "Tech Spec",
+          "[feature]-tech-spec.md",
+          "realtime-collab-tech-spec.md"
+        ],
+        [
+          "Architecture",
+          "[project]-architecture.md",
+          "taskmanager-architecture.md"
+        ],
+        [
+          "Story",
+          "[epic-id]-[story-id]-[title].md",
+          "epic1-story3-user-login.md"
+        ],
+        [
+          "Test Plan",
+          "[feature]-test-plan.md",
+          "realtime-collab-test-plan.md"
+        ]
       ]
     },
     {
@@ -808,43 +937,53 @@
       "items": [
         {
           "title": "❌ טעות 1: לדלג על תכנון",
-          "content": "**הטעות:** \"בואו נתחיל לקודד ישר!\"\n\n**למה זה רע:** ארכיטקטורה לא טובה, רה-רייט, שבועות של תיקונים\n\n**הפתרון:** תמיד תכננו לפני שמקודדים. PRD → Tech Spec → Architecture → Stories."
+          "content": "**הטעות:** \"בואו נתחיל לקודד ישר!\"\n\n**למה זה רע:** ארכיטקטורה לא טובה, רה-רייט, שבועות של תיקונים\n\n**הפתרון:** תמיד תכננו לפני שמקודדים. PRD → Tech Spec → Architecture → Stories.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 2: לא לעשות Code Review",
-          "content": "**הטעות:** \"אני Senior, לא צריך Review\"\n\n**למה זה רע:** באגים, technical debt, ידע לא משותף\n\n**הפתרון:** Code Review לכולם, תמיד. גם Seniors עושים טעויות."
+          "content": "**הטעות:** \"אני Senior, לא צריך Review\"\n\n**למה זה רע:** באגים, technical debt, ידע לא משותף\n\n**הפתרון:** Code Review לכולם, תמיד. גם Seniors עושים טעויות.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 3: Context חלקי",
-          "content": "**הטעות:** \"Dev, תעשה Story X\" (בלי context)\n\n**למה זה רע:** הDev לא יודע למה, איך, או מה קיים\n\n**הפתרון:** תמיד תנו Context מלא - מה הפרויקט, מה הטכנולוגיות, מה כבר קיים."
+          "content": "**הטעות:** \"Dev, תעשה Story X\" (בלי context)\n\n**למה זה רע:** הDev לא יודע למה, איך, או מה קיים\n\n**הפתרון:** תמיד תנו Context מלא - מה הפרויקט, מה הטכנולוגיות, מה כבר קיים.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 4: לא לתעד",
-          "content": "**הטעות:** \"נתעד בסוף\" (= לא נתעד)\n\n**למה זה רע:** אחרי חודש אף אחד לא זוכר למה עשינו משהו\n\n**הפתרון:** תעדו תוך כדי. כל החלטה, כל קוד מורכב, כל שינוי."
+          "content": "**הטעות:** \"נתעד בסוף\" (= לא נתעד)\n\n**למה זה רע:** אחרי חודש אף אחד לא זוכר למה עשינו משהו\n\n**הפתרון:** תעדו תוך כדי. כל החלטה, כל קוד מורכב, כל שינוי.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 5: להריץ יותר מדי במקביל",
-          "content": "**הטעות:** לעבוד על 5 Stories בו-זמנית\n\n**למה זה רע:** שום דבר לא מסתיים, context switching, שגיאות\n\n**הפתרון:** WIP limit = 1-2 Stories. סיימו אחת לפני שמתחילים חדשה."
+          "content": "**הטעות:** לעבוד על 5 Stories בו-זמנית\n\n**למה זה רע:** שום דבר לא מסתיים, context switching, שגיאות\n\n**הפתרון:** WIP limit = 1-2 Stories. סיימו אחת לפני שמתחילים חדשה.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 6: לא לעדכן מסמכים",
-          "content": "**הטעות:** המסמכים לא עקבים עם הקוד\n\n**למה זה רע:** אף אחד לא סומך על התיעוד\n\n**הפתרון:** כל שינוי בקוד = עדכון במסמך הרלוונטי."
+          "content": "**הטעות:** המסמכים לא עקבים עם הקוד\n\n**למה זה רע:** אף אחד לא סומך על התיעוד\n\n**הפתרון:** כל שינוי בקוד = עדכון במסמך הרלוונטי.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 7: לדלג על Retrospective",
-          "content": "**הטעות:** \"אין זמן ל-Retro, בואו נמשיך\"\n\n**למה זה רע:** חוזרים על אותן טעויות שוב ושוב\n\n**הפתרון:** Retro חובה אחרי כל Sprint. 1 שעה שמשפרת את כל הספרינטים הבאים."
+          "content": "**הטעות:** \"אין זמן ל-Retro, בואו נמשיך\"\n\n**למה זה רע:** חוזרים על אותן טעויות שוב ושוב\n\n**הפתרון:** Retro חובה אחרי כל Sprint. 1 שעה שמשפרת את כל הספרינטים הבאים.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 8: לא להריץ Tests",
-          "content": "**הטעות:** \"נכתוב טסטים אחר כך\" (= אף פעם)\n\n**למה זה רע:** באגים בפרודקשן, רגרסיות, פחד משינויים\n\n**הפתרון:** TDD או לפחות Tests תוך כדי. אחר כך = אף פעם."
+          "content": "**הטעות:** \"נכתוב טסטים אחר כך\" (= אף פעם)\n\n**למה זה רע:** באגים בפרודקשן, רגרסיות, פחד משינויים\n\n**הפתרון:** TDD או לפחות Tests תוך כדי. אחר כך = אף פעם.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 9: Context לא מעודכן",
-          "content": "**הטעות:** האגנט לא יודע מה השתנה\n\n**למה זה רע:** החלטות מבוססות על מידע ישן\n\n**הפתרון:** עדכנו Context אחרי כל שינוי משמעותי."
+          "content": "**הטעות:** האגנט לא יודע מה השתנה\n\n**למה זה רע:** החלטות מבוססות על מידע ישן\n\n**הפתרון:** עדכנו Context אחרי כל שינוי משמעותי.",
+          "markdown": true
         },
         {
           "title": "❌ טעות 10: לא להתאים את התהליך",
-          "content": "**הטעות:** \"זה מה שכתוב במדריך, צריך בדיוק ככה\"\n\n**למה זה רע:** כל פרויקט שונה, one size doesn't fit all\n\n**הפתרון:** התאימו! 80% תהליך סטנדרטי + 20% customization."
+          "content": "**הטעות:** \"זה מה שכתוב במדריך, צריך בדיוק ככה\"\n\n**למה זה רע:** כל פרויקט שונה, one size doesn't fit all\n\n**הפתרון:** התאימו! 80% תהליך סטנדרטי + 20% customization.",
+          "markdown": true
         }
       ]
     },
@@ -1067,13 +1206,15 @@
       "type": "callout",
       "variant": "success",
       "title": "🎉 מזל טוב! אתם מומחי Best Practices!",
-      "content": "סיימתם את המדריך המקיף לשיטות עבודה מומלצות עם BMAD. עכשיו יש לכם את כל הידע והכלים לעבוד בצורה מקצועית, יעילה, ואיכותית.\n\n**הצעד הבא:** תתחילו ליישם! Best Practices לא עובדים רק בתיאוריה - צריך לתרגל ולהטמיע."
+      "content": "סיימתם את המדריך המקיף לשיטות עבודה מומלצות עם BMAD. עכשיו יש לכם את כל הידע והכלים לעבוד בצורה מקצועית, יעילה, ואיכותית.\n\n**הצעד הבא:** תתחילו ליישם! Best Practices לא עובדים רק בתיאוריה - צריך לתרגל ולהטמיע.",
+      "markdown": true
     },
     {
       "type": "callout",
       "variant": "info",
       "title": "המשיכו ללמוד",
-      "content": "**מומלץ לקרוא גם:**\n\n📚 **מדריכי Roles** - למדו best practices ספציפיים לתפקיד שלכם\n📚 **Case Studies** - ראו best practices בפעולה בפרויקטים אמיתיים\n📚 **מדריכי וורקפלואים** - הבינו לעומק את כל הוורקפלואים\n📚 **FAQ Development** - שאלות ותשובות על פיתוח עם BMAD"
+      "content": "**מומלץ לקרוא גם:**\n\n📚 **מדריכי Roles** - למדו best practices ספציפיים לתפקיד שלכם\n📚 **Case Studies** - ראו best practices בפעולה בפרויקטים אמיתיים\n📚 **מדריכי וורקפלואים** - הבינו לעומק את כל הוורקפלואים\n📚 **FAQ Development** - שאלות ותשובות על פיתוח עם BMAD",
+      "markdown": true
     }
   ],
   "relatedGuides": [
@@ -1093,4 +1234,3 @@
     "customization-guide"
   ]
 }
-
