--- a/src/content/locale/he/guides/roles/non-technical.json
+++ b/src/content/locale/he/guides/roles/non-technical.json
@@ -8,7 +8,14 @@
     "difficulty": "beginner",
     "estimatedMinutes": 25,
     "icon": "IconBulb",
-    "tags": ["לא-טכני", "marketing", "מכירות", "משאבי-אנוש", "תפעול", "non-tech"],
+    "tags": [
+      "לא-טכני",
+      "marketing",
+      "מכירות",
+      "משאבי-אנוש",
+      "תפעול",
+      "non-tech"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -206,23 +213,28 @@
       "items": [
         {
           "title": "John - Product Manager (מנהל מוצר)",
-          "content": "**מה הוא עושה:** עוזר להגדיר דרישות, לכתוב מסמכים, לתכנן פיצ'רים.\n\n**מתי להשתמש:**\n- כשאתם רוצים להגדיר תכונה חדשה במוצר\n- כשצריכים לכתוב מסמך דרישות (PRD)\n- כשרוצים להבין מה הלקוחות צריכים\n\n**דוגמה:** \"John, עזור לי לכתוב PRD לפיצ'ר חדש של התראות במערכת\""
+          "content": "**מה הוא עושה:** עוזר להגדיר דרישות, לכתוב מסמכים, לתכנן פיצ'רים.\n\n**מתי להשתמש:**\n- כשאתם רוצים להגדיר תכונה חדשה במוצר\n- כשצריכים לכתוב מסמך דרישות (PRD)\n- כשרוצים להבין מה הלקוחות צריכים\n\n**דוגמה:** \"John, עזור לי לכתוב PRD לפיצ'ר חדש של התראות במערכת\"",
+          "markdown": true
         },
         {
           "title": "Mary - Business Analyst (אנליסטית עסקית)",
-          "content": "**מה היא עושה:** מנתחת נתונים, יוצרת דוחות, מפיקה תובנות.\n\n**מתי להשתמש:**\n- כשצריכים לנתח נתוני מכירות או שיווק\n- כשרוצים להבין מגמות\n- כשצריכים להכין מצגת עם נתונים\n\n**דוגמה:** \"Mary, תנתחי את נתוני המכירות מהרבעון האחרון ותראי לי מגמות\""
+          "content": "**מה היא עושה:** מנתחת נתונים, יוצרת דוחות, מפיקה תובנות.\n\n**מתי להשתמש:**\n- כשצריכים לנתח נתוני מכירות או שיווק\n- כשרוצים להבין מגמות\n- כשצריכים להכין מצגת עם נתונים\n\n**דוגמה:** \"Mary, תנתחי את נתוני המכירות מהרבעון האחרון ותראי לי מגמות\"",
+          "markdown": true
         },
         {
           "title": "Sally - UX Designer (מעצבת חוויית משתמש)",
-          "content": "**מה היא עושה:** עוזרת לתכנן חוויות משתמש, לעצב ממשקים, לבצע מחקר.\n\n**מתי להשתמש:**\n- כשרוצים לשפר את חוויית המשתמש באתר/אפליקציה\n- כשצריכים לתכנן landing page חדש\n- כשרוצים לבצע סקר משתמשים\n\n**דוגמה:** \"Sally, עזרי לי לתכנן את העמוד הראשי של האתר החדש\""
+          "content": "**מה היא עושה:** עוזרת לתכנן חוויות משתמש, לעצב ממשקים, לבצע מחקר.\n\n**מתי להשתמש:**\n- כשרוצים לשפר את חוויית המשתמש באתר/אפליקציה\n- כשצריכים לתכנן landing page חדש\n- כשרוצים לבצע סקר משתמשים\n\n**דוגמה:** \"Sally, עזרי לי לתכנן את העמוד הראשי של האתר החדש\"",
+          "markdown": true
         },
         {
           "title": "Mike - Tech Writer (כותב טכני)",
-          "content": "**מה הוא עושה:** כותב תיעוד, מדריכים, מאמרים טכניים.\n\n**מתי להשתמש:**\n- כשצריכים לכתוב מדריך למשתמשים\n- כשרוצים ליצור FAQ\n- כשצריכים להסביר משהו טכני בשפה פשוטה\n\n**דוגמה:** \"Mike, עזור לי לכתוב מדריך למשתמשים על התכונה החדשה\""
+          "content": "**מה הוא עושה:** כותב תיעוד, מדריכים, מאמרים טכניים.\n\n**מתי להשתמש:**\n- כשצריכים לכתוב מדריך למשתמשים\n- כשרוצים ליצור FAQ\n- כשצריכים להסביר משהו טכני בשפה פשוטה\n\n**דוגמה:** \"Mike, עזור לי לכתוב מדריך למשתמשים על התכונה החדשה\"",
+          "markdown": true
         },
         {
           "title": "BMAD Master - המדריך הראשי",
-          "content": "**מה הוא עושה:** מנווט אתכם במערכת, עוזר לבחור את האגנט הנכון.\n\n**מתי להשתמש:**\n- כשלא בטוחים מאיפה להתחיל\n- כשצריכים עזרה כללית\n- כשרוצים לראות מה אפשר לעשות\n\n**דוגמה:** \"Master, אני צריך עזרה ביצירת קמפיין שיווקי, מה האגנט המתאים?\""
+          "content": "**מה הוא עושה:** מנווט אתכם במערכת, עוזר לבחור את האגנט הנכון.\n\n**מתי להשתמש:**\n- כשלא בטוחים מאיפה להתחיל\n- כשצריכים עזרה כללית\n- כשרוצים לראות מה אפשר לעשות\n\n**דוגמה:** \"Master, אני צריך עזרה ביצירת קמפיין שיווקי, מה האגנט המתאים?\"",
+          "markdown": true
         }
       ]
     },
@@ -240,13 +252,37 @@
     {
       "type": "table",
       "id": "workflows-table",
-      "headers": ["Workflow", "מה הוא עושה", "דוגמה"],
+      "headers": [
+        "Workflow",
+        "מה הוא עושה",
+        "דוגמה"
+      ],
       "rows": [
-        ["brainstorming", "עוזר לסעור מוחות ולפתח רעיונות", "רעיונות לקמפיין חדש"],
-        ["research", "מבצע מחקר ואיסוף מידע", "מחקר שוק למוצר חדש"],
-        ["product-brief", "יוצר תקציר מוצר", "הגדרת תכונה חדשה"],
-        ["create-ux-design", "עוזר לתכנן ממשק משתמש", "עיצוב דף נחיתה"],
-        ["document-project", "יוצר תיעוד לפרויקט", "מדריך למשתמשים"]
+        [
+          "brainstorming",
+          "עוזר לסעור מוחות ולפתח רעיונות",
+          "רעיונות לקמפיין חדש"
+        ],
+        [
+          "research",
+          "מבצע מחקר ואיסוף מידע",
+          "מחקר שוק למוצר חדש"
+        ],
+        [
+          "product-brief",
+          "יוצר תקציר מוצר",
+          "הגדרת תכונה חדשה"
+        ],
+        [
+          "create-ux-design",
+          "עוזר לתכנן ממשק משתמש",
+          "עיצוב דף נחיתה"
+        ],
+        [
+          "document-project",
+          "יוצר תיעוד לפרויקט",
+          "מדריך למשתמשים"
+        ]
       ]
     },
     {
@@ -501,7 +537,8 @@
       "variant": "info",
       "title": "תוכנית פעולה",
       "content": "**השבוע:** קראו את מדריך ההתחלה המהירה\n\n**השבוע הבא:** התקינו את BMAD ונסו משימה ראשונה\n\n**החודש הראשון:** השתמשו ב-BMAD לפחות פעם בשבוע\n\n**אחרי 3 חודשים:** BMAD יהיה חלק טבעי מהעבודה שלכם!",
-      "id": "action-plan"
+      "id": "action-plan",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -512,12 +549,32 @@
     {
       "type": "table",
       "id": "resources-table",
-      "headers": ["משאב", "תיאור", "למי מתאים"],
+      "headers": [
+        "משאב",
+        "תיאור",
+        "למי מתאים"
+      ],
       "rows": [
-        ["התחלה מהירה", "מדריך 15 דקות ליסודות", "כולם - התחילו כאן!"],
-        ["מילון מונחים", "הסבר על כל המונחים", "כשלא מבינים מושג"],
-        ["מדריך אגנטים", "כל האגנטים במפורט", "כשרוצים להעמיק"],
-        ["שאלות ותשובות", "תשובות לשאלות נפוצות", "כשיש שאלות"]
+        [
+          "התחלה מהירה",
+          "מדריך 15 דקות ליסודות",
+          "כולם - התחילו כאן!"
+        ],
+        [
+          "מילון מונחים",
+          "הסבר על כל המונחים",
+          "כשלא מבינים מושג"
+        ],
+        [
+          "מדריך אגנטים",
+          "כל האגנטים במפורט",
+          "כשרוצים להעמיק"
+        ],
+        [
+          "שאלות ותשובות",
+          "תשובות לשאלות נפוצות",
+          "כשיש שאלות"
+        ]
       ]
     },
     {
@@ -529,4 +586,3 @@
     }
   ]
 }
-
