--- a/src/content/locale/he/guides/roles/senior-managers.json
+++ b/src/content/locale/he/guides/roles/senior-managers.json
@@ -8,7 +8,14 @@
     "difficulty": "intermediate",
     "estimatedMinutes": 30,
     "icon": "IconUsers",
-    "tags": ["ניהול", "אסטרטגיה", "מנהלים", "ROI", "leadership", "executive"],
+    "tags": [
+      "ניהול",
+      "אסטרטגיה",
+      "מנהלים",
+      "ROI",
+      "leadership",
+      "executive"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -156,13 +163,37 @@
     {
       "type": "table",
       "id": "value-table",
-      "headers": ["תחום", "השפעה", "ROI משוער"],
+      "headers": [
+        "תחום",
+        "השפעה",
+        "ROI משוער"
+      ],
       "rows": [
-        ["מהירות פיתוח", "האצה של 40-60%", "חיסכון של 6-9 חודשים לשנה"],
-        ["איכות קוד", "הפחתת באגים ב-50%", "חיסכון של 20-30% בזמן תיקונים"],
-        ["תיעוד", "שיפור של 70%", "חיסכון של 4-6 שעות שבועיות לצוות"],
-        ["תקשורת צוות", "הפחתת ישיבות ב-30%", "חיסכון של 8-12 שעות שבועיות"],
-        ["Time to Market", "קיצור ב-3-6 חודשים", "יתרון תחרותי משמעותי"]
+        [
+          "מהירות פיתוח",
+          "האצה של 40-60%",
+          "חיסכון של 6-9 חודשים לשנה"
+        ],
+        [
+          "איכות קוד",
+          "הפחתת באגים ב-50%",
+          "חיסכון של 20-30% בזמן תיקונים"
+        ],
+        [
+          "תיעוד",
+          "שיפור של 70%",
+          "חיסכון של 4-6 שעות שבועיות לצוות"
+        ],
+        [
+          "תקשורת צוות",
+          "הפחתת ישיבות ב-30%",
+          "חיסכון של 8-12 שעות שבועיות"
+        ],
+        [
+          "Time to Market",
+          "קיצור ב-3-6 חודשים",
+          "יתרון תחרותי משמעותי"
+        ]
       ]
     },
     {
@@ -295,23 +326,28 @@
       "items": [
         {
           "title": "Velocity / מהירות פיתוח",
-          "content": "**מדידה:** כמה Stories / Features מסיימים בספרינט.\n\n**Baseline:** למדדו את הממוצע של 3-6 חודשים לפני BMAD.\n\n**מטרה:** שיפור של 30-50% תוך 3 חודשים.\n\n**כלי מדידה:** Jira, Azure DevOps, או מערכת ניהול פרויקטים אחרת."
+          "content": "**מדידה:** כמה Stories / Features מסיימים בספרינט.\n\n**Baseline:** למדדו את הממוצע של 3-6 חודשים לפני BMAD.\n\n**מטרה:** שיפור של 30-50% תוך 3 חודשים.\n\n**כלי מדידה:** Jira, Azure DevOps, או מערכת ניהול פרויקטים אחרת.",
+          "markdown": true
         },
         {
           "title": "Code Quality / איכות קוד",
-          "content": "**מדידה:** כמות באגים, code review comments, technical debt.\n\n**Baseline:** ספירת באגים חודשית לפני BMAD.\n\n**מטרה:** הפחתה של 40-60% בבאגים.\n\n**כלי מדידה:** SonarQube, GitHub Issues, Sentry."
+          "content": "**מדידה:** כמות באגים, code review comments, technical debt.\n\n**Baseline:** ספירת באגים חודשית לפני BMAD.\n\n**מטרה:** הפחתה של 40-60% בבאגים.\n\n**כלי מדידה:** SonarQube, GitHub Issues, Sentry.",
+          "markdown": true
         },
         {
           "title": "Documentation Quality / איכות תיעוד",
-          "content": "**מדידה:** אחוז של Features מתועדות, שלמות תיעוד, שביעות רצון מהתיעוד.\n\n**Baseline:** סקירה של תיעוד קיים.\n\n**מטרה:** כל Feature עם תיעוד מלא (100%).\n\n**כלי מדידה:** סקרי עובדים, Code reviews."
+          "content": "**מדידה:** אחוז של Features מתועדות, שלמות תיעוד, שביעות רצון מהתיעוד.\n\n**Baseline:** סקירה של תיעוד קיים.\n\n**מטרה:** כל Feature עם תיעוד מלא (100%).\n\n**כלי מדידה:** סקרי עובדים, Code reviews.",
+          "markdown": true
         },
         {
           "title": "Time to Market / זמן להשקה",
-          "content": "**מדידה:** זמן ממושג ל-production.\n\n**Baseline:** ממוצע זמן להשקה של פיצ'רים גדולים.\n\n**מטרה:** קיצור של 30-50%.\n\n**כלי מדידה:** מעקב אחר Epic lifecycle."
+          "content": "**מדידה:** זמן ממושג ל-production.\n\n**Baseline:** ממוצע זמן להשקה של פיצ'רים גדולים.\n\n**מטרה:** קיצור של 30-50%.\n\n**כלי מדידה:** מעקב אחר Epic lifecycle.",
+          "markdown": true
         },
         {
           "title": "Team Satisfaction / שביעות רצון צוותים",
-          "content": "**מדידה:** סקרים רבעוניים, Net Promoter Score (NPS).\n\n**Baseline:** סקר לפני אימוץ BMAD.\n\n**מטרה:** שיפור של 20-30 נקודות ב-NPS.\n\n**כלי מדידה:** TINYpulse, Officevibe, או סקר פנימי."
+          "content": "**מדידה:** סקרים רבעוניים, Net Promoter Score (NPS).\n\n**Baseline:** סקר לפני אימוץ BMAD.\n\n**מטרה:** שיפור של 20-30 נקודות ב-NPS.\n\n**כלי מדידה:** TINYpulse, Officevibe, או סקר פנימי.",
+          "markdown": true
         }
       ]
     },
@@ -439,13 +475,37 @@
     {
       "type": "table",
       "id": "workflows-table",
-      "headers": ["Workflow", "מה הוא עושה", "מתי להשתמש"],
+      "headers": [
+        "Workflow",
+        "מה הוא עושה",
+        "מתי להשתמש"
+      ],
       "rows": [
-        ["workflow-status", "מציג מצב הפרויקט והאתגרים", "סקירות שבועיות, עדכוני הנהלה"],
-        ["retrospective", "מנחה רטרוספקטיבה מובנית", "סוף ספרינט, סוף פרויקט"],
-        ["product-brief", "יוצר Product Brief מובנה", "תכנון מוצרים חדשים"],
-        ["brainstorming", "מסייע בסיעור מוחות מובנה", "workshops, תכנון אסטרטגי"],
-        ["correct-course", "מציע תיקוני מסלול", "כשהפרויקט תקוע"]
+        [
+          "workflow-status",
+          "מציג מצב הפרויקט והאתגרים",
+          "סקירות שבועיות, עדכוני הנהלה"
+        ],
+        [
+          "retrospective",
+          "מנחה רטרוספקטיבה מובנית",
+          "סוף ספרינט, סוף פרויקט"
+        ],
+        [
+          "product-brief",
+          "יוצר Product Brief מובנה",
+          "תכנון מוצרים חדשים"
+        ],
+        [
+          "brainstorming",
+          "מסייע בסיעור מוחות מובנה",
+          "workshops, תכנון אסטרטגי"
+        ],
+        [
+          "correct-course",
+          "מציע תיקוני מסלול",
+          "כשהפרויקט תקוע"
+        ]
       ]
     },
     {
@@ -488,7 +548,8 @@
       "variant": "info",
       "title": "תוכנית פעולה",
       "content": "1. **השבוע:** קראו עוד על BMAD, דברו עם הצוותים, זהו צוות פיילוט\n\n2. **חודש 1:** הריצו פיילוט, אספו נתונים, מדדו baseline\n\n3. **חודש 2-3:** הרחיבו ל-2-3 צוותים, בנו Best Practices\n\n4. **חודש 4-6:** Full rollout, מדידה ארגונית, שיפור מתמיד",
-      "id": "action-plan"
+      "id": "action-plan",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -516,4 +577,3 @@
     }
   ]
 }
-
