--- a/src/content/locale/he/guides/workflows/intro-critical.json
+++ b/src/content/locale/he/guides/workflows/intro-critical.json
@@ -8,7 +8,12 @@
     "difficulty": "beginner",
     "estimatedMinutes": 30,
     "icon": "IconGitBranch",
-    "tags": ["וורקפלואים", "תהליכים", "מבוא", "יסודות"],
+    "tags": [
+      "וורקפלואים",
+      "תהליכים",
+      "מבוא",
+      "יסודות"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -86,7 +91,8 @@
     },
     {
       "type": "text",
-      "content": "**Workflow** (זרימת עבודה) ב-BMAD הוא תהליך עבודה מובנה ואוטומטי שמדריך אתכם צעד אחר צעד דרך משימה מורכבת. במקום לנחש מה לעשות הלאה או לשכוח שלבים חשובים, הוורקפלו מבטיח שתעשו הכל בסדר הנכון, עם כל המידע הדרוש."
+      "content": "**Workflow** (זרימת עבודה) ב-BMAD הוא תהליך עבודה מובנה ואוטומטי שמדריך אתכם צעד אחר צעד דרך משימה מורכבת. במקום לנחש מה לעשות הלאה או לשכוח שלבים חשובים, הוורקפלו מבטיח שתעשו הכל בסדר הנכון, עם כל המידע הדרוש.",
+      "markdown": true
     },
     {
       "type": "text",
@@ -203,7 +209,8 @@
     },
     {
       "type": "text",
-      "content": "**workflow-status** הוא כמו מערכת GPS לפרויקט שלכם. הוא בודק איפה אתם נמצאים במחזור החיים של הפרויקט, מה כבר השלמתם, ומה צריך לעשות הלאה."
+      "content": "**workflow-status** הוא כמו מערכת GPS לפרויקט שלכם. הוא בודק איפה אתם נמצאים במחזור החיים של הפרויקט, מה כבר השלמתם, ומה צריך לעשות הלאה.",
+      "markdown": true
     },
     {
       "type": "text",
@@ -338,7 +345,8 @@
     },
     {
       "type": "text",
-      "content": "**workflow-init** הוא הוורקפלו שמאתחל פרויקט חדש ב-BMAD. הוא יוצר את מבנה התיקיות, יוצר קובץ תצורה (`bmad-project.yaml`), ובונה לכם מסלול עבודה מותאם אישית בהתאם לסוג הפרויקט ולגודל שלו."
+      "content": "**workflow-init** הוא הוורקפלו שמאתחל פרויקט חדש ב-BMAD. הוא יוצר את מבנה התיקיות, יוצר קובץ תצורה (`bmad-project.yaml`), ובונה לכם מסלול עבודה מותאם אישית בהתאם לסוג הפרויקט ולגודל שלו.",
+      "markdown": true
     },
     {
       "type": "text",
@@ -475,7 +483,8 @@
     },
     {
       "type": "text",
-      "content": "**מטרה:** לקחת רעיון מעורפל ולהפוך אותו לתקציר מוצר ברור."
+      "content": "**מטרה:** לקחת רעיון מעורפל ולהפוך אותו לתקציר מוצר ברור.",
+      "markdown": true
     },
     {
       "type": "card",
@@ -485,7 +494,8 @@
     },
     {
       "type": "text",
-      "content": "**תפוקות:** Product Brief, מחקר ראשוני, הבנת השוק והמתחרים"
+      "content": "**תפוקות:** Product Brief, מחקר ראשוני, הבנת השוק והמתחרים",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -495,7 +505,8 @@
     },
     {
       "type": "text",
-      "content": "**מטרה:** להפוך את התקציר למפרט מפורט וארכיטקטורה מוגדרת."
+      "content": "**מטרה:** להפוך את התקציר למפרט מפורט וארכיטקטורה מוגדרת.",
+      "markdown": true
     },
     {
       "type": "card",
@@ -505,7 +516,8 @@
     },
     {
       "type": "text",
-      "content": "**תפוקות:** PRD / Tech Spec, Architecture Docs, UX Design, תוכניות טכניות"
+      "content": "**תפוקות:** PRD / Tech Spec, Architecture Docs, UX Design, תוכניות טכניות",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -515,7 +527,8 @@
     },
     {
       "type": "text",
-      "content": "**מטרה:** לפרק את המפרט לסיפורים ניתנים למימוש ולתכנן ספרינטים."
+      "content": "**מטרה:** לפרק את המפרט לסיפורים ניתנים למימוש ולתכנן ספרינטים.",
+      "markdown": true
     },
     {
       "type": "card",
@@ -525,7 +538,8 @@
     },
     {
       "type": "text",
-      "content": "**תפוקות:** Epics, Stories, Story Context, תוכנית ספרינט"
+      "content": "**תפוקות:** Epics, Stories, Story Context, תוכנית ספרינט",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -535,7 +549,8 @@
     },
     {
       "type": "text",
-      "content": "**מטרה:** לכתוב קוד, לבצע ביקורות, ולסיים סיפורים."
+      "content": "**מטרה:** לכתוב קוד, לבצע ביקורות, ולסיים סיפורים.",
+      "markdown": true
     },
     {
       "type": "card",
@@ -545,7 +560,8 @@
     },
     {
       "type": "text",
-      "content": "**תפוקות:** קוד עובד, בדיקות, documentation"
+      "content": "**תפוקות:** קוד עובד, בדיקות, documentation",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -555,7 +571,8 @@
     },
     {
       "type": "text",
-      "content": "**מטרה:** לנהל את הפרויקט, לתקן מסלול, ולשפר תהליכים."
+      "content": "**מטרה:** לנהל את הפרויקט, לתקן מסלול, ולשפר תהליכים.",
+      "markdown": true
     },
     {
       "type": "card",
@@ -565,7 +582,8 @@
     },
     {
       "type": "text",
-      "content": "**תפוקות:** דוחות סטטוס, תיקוני מסלול, שיפורי תהליך"
+      "content": "**תפוקות:** דוחות סטטוס, תיקוני מסלול, שיפורי תהליך",
+      "markdown": true
     },
     {
       "type": "callout",
@@ -857,4 +875,3 @@
     }
   ]
 }
-
