--- a/src/content/locale/he/guides/workflows/management.json
+++ b/src/content/locale/he/guides/workflows/management.json
@@ -8,7 +8,13 @@
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
     "icon": "IconChartLine",
-    "tags": ["וורקפלואים", "ניהול", "management", "retrospective", "status"],
+    "tags": [
+      "וורקפלואים",
+      "ניהול",
+      "management",
+      "retrospective",
+      "status"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -140,11 +146,27 @@
     },
     {
       "type": "table",
-      "headers": ["וורקפלוא", "מתי", "תדירות"],
+      "headers": [
+        "וורקפלוא",
+        "מתי",
+        "תדירות"
+      ],
       "rows": [
-        ["workflow-status", "בכל זמן - לבדיקת מצב", "יומי/לפי צורך"],
-        ["retrospective", "בסוף ספרינט/milestone", "כל 1-2 שבועות"],
-        ["correct-course", "כשמזהים בעיה", "לפי צורך"]
+        [
+          "workflow-status",
+          "בכל זמן - לבדיקת מצב",
+          "יומי/לפי צורך"
+        ],
+        [
+          "retrospective",
+          "בסוף ספרינט/milestone",
+          "כל 1-2 שבועות"
+        ],
+        [
+          "correct-course",
+          "כשמזהים בעיה",
+          "לפי צורך"
+        ]
       ]
     },
     {
@@ -251,27 +273,32 @@
         {
           "id": "status-section-1",
           "title": "סיכום כללי",
-          "content": "**כולל:**\n- תאריך הדוח\n- ימים בספרינט\n- אחוזי השלמה\n- סטטוס כללי (On Track / At Risk / Behind)"
+          "content": "**כולל:**\n- תאריך הדוח\n- ימים בספרינט\n- אחוזי השלמה\n- סטטוס כללי (On Track / At Risk / Behind)",
+          "markdown": true
         },
         {
           "id": "status-section-2",
           "title": "Stories Breakdown",
-          "content": "**רשימה של:**\n- Stories שהושלמו (Done)\n- Stories בתהליך (In Progress) + אחוזי השלמה\n- Stories שלא התחילו (Todo)\n\n**כל Story עם:**\n- מספר ושם\n- סטטוס\n- זמן משוער להשלמה"
+          "content": "**רשימה של:**\n- Stories שהושלמו (Done)\n- Stories בתהליך (In Progress) + אחוזי השלמה\n- Stories שלא התחילו (Todo)\n\n**כל Story עם:**\n- מספר ושם\n- סטטוס\n- זמן משוער להשלמה",
+          "markdown": true
         },
         {
           "id": "status-section-3",
           "title": "Blockers & Risks",
-          "content": "**רשימה של:**\n- Blockers פעילים - מה עוצר את העבודה\n- Risks מזוהים - מה עלול להיות בעיה\n- כמה זמן כל Blocker קיים\n- Action items לפתרון"
+          "content": "**רשימה של:**\n- Blockers פעילים - מה עוצר את העבודה\n- Risks מזוהים - מה עלול להיות בעיה\n- כמה זמן כל Blocker קיים\n- Action items לפתרון",
+          "markdown": true
         },
         {
           "id": "status-section-4",
           "title": "Timeline Analysis",
-          "content": "**ניתוח של:**\n- Burndown - האם אנחנו on-track?\n- Velocity - כמה Story Points ליום\n- ETA - מתי צפוי סיום\n- Gap analysis - פער בין תוכנית למציאות"
+          "content": "**ניתוח של:**\n- Burndown - האם אנחנו on-track?\n- Velocity - כמה Story Points ליום\n- ETA - מתי צפוי סיום\n- Gap analysis - פער בין תוכנית למציאות",
+          "markdown": true
         },
         {
           "id": "status-section-5",
           "title": "המלצות",
-          "content": "**מה לעשות:**\n- Actions מיידיים\n- שינויי עדיפויות\n- סיכונים לטפל בהם\n- שיקולים לספרינט הבא"
+          "content": "**מה לעשות:**\n- Actions מיידיים\n- שינויי עדיפויות\n- סיכונים לטפל בהם\n- שיקולים לספרינט הבא",
+          "markdown": true
         }
       ]
     },
@@ -404,13 +431,31 @@
     },
     {
       "type": "table",
-      "headers": ["מתי", "למה"],
+      "headers": [
+        "מתי",
+        "למה"
+      ],
       "rows": [
-        ["בסוף ספרינט", "ללמוד מה-2 שבועות האחרונות"],
-        ["אחרי Epic גדול", "ללמוד מתהליך ארוך"],
-        ["אחרי Milestone", "לסכם שלב בפרויקט"],
-        ["כשיש בעיה חוזרת", "לזהות pattern ולתקן"],
-        ["כל חודש", "גם אם אין ספרינט פורמלי"]
+        [
+          "בסוף ספרינט",
+          "ללמוד מה-2 שבועות האחרונות"
+        ],
+        [
+          "אחרי Epic גדול",
+          "ללמוד מתהליך ארוך"
+        ],
+        [
+          "אחרי Milestone",
+          "לסכם שלב בפרויקט"
+        ],
+        [
+          "כשיש בעיה חוזרת",
+          "לזהות pattern ולתקן"
+        ],
+        [
+          "כל חודש",
+          "גם אם אין ספרינט פורמלי"
+        ]
       ]
     },
     {
@@ -547,22 +592,26 @@
         {
           "id": "trigger-1",
           "title": "מאחור בלוחות זמנים",
-          "content": "**כשלראות:**\n- אחוזי השלמה < אחוזי זמן שעבר\n- Burndown מעל הקו הצפוי\n- Stories לא יסתיימו בזמן\n\n**דוגמה:** 35% הושלמו אבל 70% מהזמן עבר"
+          "content": "**כשלראות:**\n- אחוזי השלמה < אחוזי זמן שעבר\n- Burndown מעל הקו הצפוי\n- Stories לא יסתיימו בזמן\n\n**דוגמה:** 35% הושלמו אבל 70% מהזמן עבר",
+          "markdown": true
         },
         {
           "id": "trigger-2",
           "title": "Blocker משמעותי",
-          "content": "**כשיש:**\n- Blocker שעוצר 2+ Stories\n- Blocker שקיים יותר מ-2 ימים\n- Blocker שלא ניתן לפתור מהר\n\n**דוגמה:** API key חסר ולא יגיע שבוע"
+          "content": "**כשיש:**\n- Blocker שעוצר 2+ Stories\n- Blocker שקיים יותר מ-2 ימים\n- Blocker שלא ניתן לפתור מהר\n\n**דוגמה:** API key חסר ולא יגיע שבוע",
+          "markdown": true
         },
         {
           "id": "trigger-3",
           "title": "שינוי דרישות",
-          "content": "**כשמתקבל:**\n- דרישה חדשה משמעותית\n- שינוי באפיפויות\n- ביטול תכונה\n\n**דוגמה:** הלקוח רוצה תכונה נוספת במקום אחרת"
+          "content": "**כשמתקבל:**\n- דרישה חדשה משמעותית\n- שינוי באפיפויות\n- ביטול תכונה\n\n**דוגמה:** הלקוח רוצה תכונה נוספת במקום אחרת",
+          "markdown": true
         },
         {
           "id": "trigger-4",
           "title": "סיכון מזוהה",
-          "content": "**כשמזהים:**\n- סיכון טכני (ארכיטקטורה)\n- סיכון משאבים (חוסר אנשים)\n- סיכון לוחות זמנים\n\n**דוגמה:** המערכת לא תעמוד בעומס הצפוי"
+          "content": "**כשמזהים:**\n- סיכון טכני (ארכיטקטורה)\n- סיכון משאבים (חוסר אנשים)\n- סיכון לוחות זמנים\n\n**דוגמה:** המערכת לא תעמוד בעומס הצפוי",
+          "markdown": true
         }
       ]
     },
@@ -761,42 +810,50 @@
         {
           "id": "faq-1",
           "title": "כמה פעמים צריך להריץ workflow-status?",
-          "content": "**תלוי בגודל הפרויקט:**\n\n**פרויקט קטן (1-3 מפתחים):**\n- פעם ביום - בבוקר\n- לפני פגישות\n\n**פרויקט בינוני (4-10 מפתחים):**\n- פעמיים ביום - בוקר וצהריים\n- לפני stand-ups\n- אחרי סגירת Stories\n\n**פרויקט גדול (10+ מפתחים):**\n- 3-4 פעמים ביום\n- אוטומציה (CI/CD)\n\n**תמיד:**\n- לפני פגישה עם מנהלים\n- כשיש Blocker\n- כשמישהו שואל \"מה המצב?\""
+          "content": "**תלוי בגודל הפרויקט:**\n\n**פרויקט קטן (1-3 מפתחים):**\n- פעם ביום - בבוקר\n- לפני פגישות\n\n**פרויקט בינוני (4-10 מפתחים):**\n- פעמיים ביום - בוקר וצהריים\n- לפני stand-ups\n- אחרי סגירת Stories\n\n**פרויקט גדול (10+ מפתחים):**\n- 3-4 פעמים ביום\n- אוטומציה (CI/CD)\n\n**תמיד:**\n- לפני פגישה עם מנהלים\n- כשיש Blocker\n- כשמישהו שואל \"מה המצב?\"",
+          "markdown": true
         },
         {
           "id": "faq-2",
           "title": "מה אם אין זמן לרטרוספקטיבה?",
-          "content": "**תמצאו זמן!** 🚨\n\nרטרוספקטיבה היא **לא luxury**, זה **necessity**.\n\n**בלי רטרו:**\n- תחזרו על טעויות\n- לא תשתפרו\n- הצוות לא ילמד\n\n**פתרונות:**\n- רטרו קצר (30 דק)\n- רטרו אסינכרוני (כולם כותבים)\n- הוורקפלוא אוטומטי (עושה חלק מהעבודה)\n\n**המינימום:** רטרו אחת לחודש!"
+          "content": "**תמצאו זמן!** 🚨\n\nרטרוספקטיבה היא **לא luxury**, זה **necessity**.\n\n**בלי רטרו:**\n- תחזרו על טעויות\n- לא תשתפרו\n- הצוות לא ילמד\n\n**פתרונות:**\n- רטרו קצר (30 דק)\n- רטרו אסינכרוני (כולם כותבים)\n- הוורקפלוא אוטומטי (עושה חלק מהעבודה)\n\n**המינימום:** רטרו אחת לחודש!",
+          "markdown": true
         },
         {
           "id": "faq-3",
           "title": "מתי לא להריץ correct-course?",
-          "content": "**אל תריצו correct-course אם:**\n\n1. **השינוי קטן** - עדכון קל ב-status\n2. **אתם לא בטוחים** - תבדקו עוד\n3. **אין זמן לביצוע** - אין טעם בתוכנית שלא תקרה\n4. **הספרינט כמעט נגמר** - חכו לרטרו\n\n**כן תריצו אם:**\n1. השינוי משמעותי (scope/timeline)\n2. יש Blocker משמעותי\n3. צריך החלטה מהירה\n4. צריך לעדכן stakeholders"
+          "content": "**אל תריצו correct-course אם:**\n\n1. **השינוי קטן** - עדכון קל ב-status\n2. **אתם לא בטוחים** - תבדקו עוד\n3. **אין זמן לביצוע** - אין טעם בתוכנית שלא תקרה\n4. **הספרינט כמעט נגמר** - חכו לרטרו\n\n**כן תריצו אם:**\n1. השינוי משמעותי (scope/timeline)\n2. יש Blocker משמעותי\n3. צריך החלטה מהירה\n4. צריך לעדכן stakeholders",
+          "markdown": true
         },
         {
           "id": "faq-4",
           "title": "האם הוורקפלואים האלה מחליפים Scrum Master?",
-          "content": "**לא! הם משלימים.**\n\n**הוורקפלואים:**\n- אוספים נתונים\n- מנתחים\n- מציעים המלצות\n- יוצרים דוחות\n\n**Scrum Master/PM:**\n- מוביל את הפגישות\n- מקבל החלטות\n- מנהל את האנשים\n- פותר קונפליקטים\n\n**הם עובדים ביחד!**\nהוורקפלואים חוסכים זמן ונותנים נתונים, האדם מוביל ומחליט."
+          "content": "**לא! הם משלימים.**\n\n**הוורקפלואים:**\n- אוספים נתונים\n- מנתחים\n- מציעים המלצות\n- יוצרים דוחות\n\n**Scrum Master/PM:**\n- מוביל את הפגישות\n- מקבל החלטות\n- מנהל את האנשים\n- פותר קונפליקטים\n\n**הם עובדים ביחד!**\nהוורקפלואים חוסכים זמן ונותנים נתונים, האדם מוביל ומחליט.",
+          "markdown": true
         },
         {
           "id": "faq-5",
           "title": "מה עושים עם ה-Action Items מהרטרו?",
-          "content": "**תהליך מומלץ:**\n\n1. **סיום הרטרו:**\n   - רשימת Action Items\n   - כל אחד עם אחראי\n\n2. **תיעדוף:**\n   - P0 - קריטי (עושים בספרינט הבא)\n   - P1 - חשוב (עושים בחודש)\n   - P2 - נחמד (כשיש זמן)\n\n3. **Tracking:**\n   - הוסיפו ל-sprint-status.yaml\n   - או יצרו Story 0.X (on-the-go)\n   - או רשימה ב-docs/retro-actions.md\n\n4. **בדיקה:**\n   - ברטרו הבא - האם עשינו?\n   - אם לא - למה? עדיין רלוונטי?"
+          "content": "**תהליך מומלץ:**\n\n1. **סיום הרטרו:**\n   - רשימת Action Items\n   - כל אחד עם אחראי\n\n2. **תיעדוף:**\n   - P0 - קריטי (עושים בספרינט הבא)\n   - P1 - חשוב (עושים בחודש)\n   - P2 - נחמד (כשיש זמן)\n\n3. **Tracking:**\n   - הוסיפו ל-sprint-status.yaml\n   - או יצרו Story 0.X (on-the-go)\n   - או רשימה ב-docs/retro-actions.md\n\n4. **בדיקה:**\n   - ברטרו הבא - האם עשינו?\n   - אם לא - למה? עדיין רלוונטי?",
+          "markdown": true
         },
         {
           "id": "faq-6",
           "title": "איך משלבים עם כלי ניהול אחרים (Jira, Trello)?",
-          "content": "**BMAD משלים, לא מחליף!**\n\n**אינטגרציה אפשרית:**\n\n1. **Jira:**\n   - workflow-status קורא מ-Jira API\n   - מעדכן Jira אחרי correct-course\n   - רטרו נשמר גם ב-Confluence\n\n2. **Trello:**\n   - קריאה מ-Trello boards\n   - סנכרון סטטוסים\n\n3. **GitHub Projects:**\n   - קריאה מ-Issues\n   - עדכון Labels\n\n**כרגע:**\nהוורקפלואים עובדים עם הקבצים המקומיים (docs/), אבל אפשר להוסיף אינטגרציות!"
+          "content": "**BMAD משלים, לא מחליף!**\n\n**אינטגרציה אפשרית:**\n\n1. **Jira:**\n   - workflow-status קורא מ-Jira API\n   - מעדכן Jira אחרי correct-course\n   - רטרו נשמר גם ב-Confluence\n\n2. **Trello:**\n   - קריאה מ-Trello boards\n   - סנכרון סטטוסים\n\n3. **GitHub Projects:**\n   - קריאה מ-Issues\n   - עדכון Labels\n\n**כרגע:**\nהוורקפלואים עובדים עם הקבצים המקומיים (docs/), אבל אפשר להוסיף אינטגרציות!",
+          "markdown": true
         },
         {
           "id": "faq-7",
           "title": "מה אם הצוות לא מעדכן סטטוסים?",
-          "content": "**בעיה נפוצה! פתרונות:**\n\n**קצר טווח:**\n1. הזכירו בכל stand-up\n2. הוסיפו ל-DoD: \"עדכן סטטוס\"\n3. הפכו למי שעושה tracking\n\n**ארוך טווח:**\n1. **הסבירו את הערך** - למה זה חשוב\n2. **הראו דוגמאות** - איך זה עוזר\n3. **אוטומציה** - עדכונים מ-commits/PRs\n4. **תרבות** - שיפור תרבות התיעוד\n\n**זכרו:**\nאם קשה לצוות לעדכן, אולי התהליך מסורבל מדי. פשטו!"
+          "content": "**בעיה נפוצה! פתרונות:**\n\n**קצר טווח:**\n1. הזכירו בכל stand-up\n2. הוסיפו ל-DoD: \"עדכן סטטוס\"\n3. הפכו למי שעושה tracking\n\n**ארוך טווח:**\n1. **הסבירו את הערך** - למה זה חשוב\n2. **הראו דוגמאות** - איך זה עוזר\n3. **אוטומציה** - עדכונים מ-commits/PRs\n4. **תרבות** - שיפור תרבות התיעוד\n\n**זכרו:**\nאם קשה לצוות לעדכן, אולי התהליך מסורבל מדי. פשטו!",
+          "markdown": true
         },
         {
           "id": "faq-8",
           "title": "איך יודעים שהניהול עובד?",
-          "content": "**סימנים לניהול טוב:**\n\n✅ **אין הפתעות** - תמיד יודעים את המצב\n✅ **בעיות מזוהות מוקדם** - לא ברגע האחרון\n✅ **Velocity יציב** - כל ספרינט דומה\n✅ **הצוות רגוע** - לא stress\n✅ **השלמה עקבית** - משיגים מטרות\n✅ **שיפור מתמיד** - כל ספרינט יותר טוב\n\n**סימנים לבעיה:**\n\n🔴 **הפתעות תמידיות** - \"איך לא ידענו?\"\n🔴 **בעיות מאוחר** - מגלים בסוף\n🔴 **Velocity משתנה** - 10 SP אחרי 30 SP\n🔴 **הצוות תחת לחץ** - overtime קבוע\n🔴 **לא משיגים מטרות** - כל פעם דוחים\n\nאם יש בעיות - הריצו retrospective וחפשו את השורש!"
+          "content": "**סימנים לניהול טוב:**\n\n✅ **אין הפתעות** - תמיד יודעים את המצב\n✅ **בעיות מזוהות מוקדם** - לא ברגע האחרון\n✅ **Velocity יציב** - כל ספרינט דומה\n✅ **הצוות רגוע** - לא stress\n✅ **השלמה עקבית** - משיגים מטרות\n✅ **שיפור מתמיד** - כל ספרינט יותר טוב\n\n**סימנים לבעיה:**\n\n🔴 **הפתעות תמידיות** - \"איך לא ידענו?\"\n🔴 **בעיות מאוחר** - מגלים בסוף\n🔴 **Velocity משתנה** - 10 SP אחרי 30 SP\n🔴 **הצוות תחת לחץ** - overtime קבוע\n🔴 **לא משיגים מטרות** - כל פעם דוחים\n\nאם יש בעיות - הריצו retrospective וחפשו את השורש!",
+          "markdown": true
         }
       ]
     },
@@ -942,4 +999,3 @@
     }
   ]
 }
-
