--- a/src/content/locale/he/guides/core/bmad-installation.json
+++ b/src/content/locale/he/guides/core/bmad-installation.json
@@ -8,7 +8,14 @@
     "difficulty": "beginner",
     "estimatedMinutes": 15,
     "icon": "Download",
-    "tags": ["התקנה", "bmad", "setup", "getting-started", "cursor", "installation"],
+    "tags": [
+      "התקנה",
+      "bmad",
+      "setup",
+      "getting-started",
+      "cursor",
+      "installation"
+    ],
     "author": "צוות Agenseek",
     "version": "6.0"
   },
@@ -114,7 +121,8 @@
     },
     {
       "type": "text",
-      "content": "**הקלד:** `Y`"
+      "content": "**הקלד:** `Y`",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -136,11 +144,13 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter` (כדי לקבל את התיקייה המוצעת)"
+      "content": "**לחץ:** `Enter` (כדי לקבל את התיקייה המוצעת)",
+      "markdown": true
     },
     {
       "type": "text",
-      "content": "המערכת תבקש אישור נוסף - **הקלד:** `Y`"
+      "content": "המערכת תבקש אישור נוסף - **הקלד:** `Y`",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -164,11 +174,13 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter` פעם אחת"
+      "content": "**לחץ:** `Enter` פעם אחת",
+      "markdown": true
     },
     {
       "type": "text",
-      "content": "**הקלד:** את שמך באנגלית"
+      "content": "**הקלד:** את שמך באנגלית",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -183,7 +195,8 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter` (ברירת מחדל: אנגלית)"
+      "content": "**לחץ:** `Enter` (ברירת מחדל: אנגלית)",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -198,7 +211,8 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter` (ברירת מחדל: אנגלית)"
+      "content": "**לחץ:** `Enter` (ברירת מחדל: אנגלית)",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -213,7 +227,8 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter` (ברירת מחדל: תיקיית docs)"
+      "content": "**לחץ:** `Enter` (ברירת מחדל: תיקיית docs)",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -237,17 +252,20 @@
     },
     {
       "type": "text",
-      "content": "**פעולות:**"
+      "content": "**פעולות:**",
+      "markdown": true
     },
     {
       "type": "list",
       "ordered": true,
       "items": [
         {
-          "content": "השתמש במקש **רווח** כדי לסמן את `BMM: BMad Method`"
+          "content": "השתמש במקש **רווח** כדי לסמן את `BMM: BMad Method`",
+          "markdown": true
         },
         {
-          "content": "לחץ **Enter** לאישור"
+          "content": "לחץ **Enter** לאישור",
+          "markdown": true
         }
       ]
     },
@@ -267,17 +285,20 @@
     },
     {
       "type": "text",
-      "content": "**פעולות:**"
+      "content": "**פעולות:**",
+      "markdown": true
     },
     {
       "type": "list",
       "ordered": true,
       "items": [
         {
-          "content": "השתמש במקש **רווח** כדי לסמן את `CURSOR`"
+          "content": "השתמש במקש **רווח** כדי לסמן את `CURSOR`",
+          "markdown": true
         },
         {
-          "content": "לחץ **Enter** לאישור"
+          "content": "לחץ **Enter** לאישור",
+          "markdown": true
         }
       ]
     },
@@ -303,7 +324,8 @@
     },
     {
       "type": "text",
-      "content": "**אפשרויות:**"
+      "content": "**אפשרויות:**",
+      "markdown": true
     },
     {
       "type": "list",
@@ -313,7 +335,8 @@
           "content": "הקלד שם פרויקט משלך"
         },
         {
-          "content": "לחץ `Enter` לשימוש בשם התיקייה"
+          "content": "לחץ `Enter` לשימוש בשם התיקייה",
+          "markdown": true
         }
       ]
     },
@@ -330,7 +353,8 @@
     },
     {
       "type": "text",
-      "content": "**הקלד:** `N`"
+      "content": "**הקלד:** `N`",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -354,7 +378,8 @@
     },
     {
       "type": "text",
-      "content": "**בחר:** את הרמה המתאימה לך (1-3)"
+      "content": "**בחר:** את הרמה המתאימה לך (1-3)",
+      "markdown": true
     },
     {
       "type": "callout",
@@ -375,7 +400,8 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter`"
+      "content": "**לחץ:** `Enter`",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -390,7 +416,8 @@
     },
     {
       "type": "text",
-      "content": "**לחץ:** `Enter`"
+      "content": "**לחץ:** `Enter`",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -405,7 +432,8 @@
     },
     {
       "type": "text",
-      "content": "**הקלד:** `Y`"
+      "content": "**הקלד:** `Y`",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -420,7 +448,8 @@
     },
     {
       "type": "text",
-      "content": "**הקלד:** `N`"
+      "content": "**הקלד:** `N`",
+      "markdown": true
     },
     {
       "type": "divider"
@@ -439,7 +468,8 @@
     },
     {
       "type": "text",
-      "content": "**מה הלאה?**"
+      "content": "**מה הלאה?**",
+      "markdown": true
     },
     {
       "type": "list",
@@ -470,4 +500,3 @@
     }
   ]
 }
-
