--- a/src/content/locale/he/guides/practical/learning-paths.json
+++ b/src/content/locale/he/guides/practical/learning-paths.json
@@ -8,7 +8,12 @@
     "difficulty": "beginner",
     "estimatedMinutes": 25,
     "icon": "Route",
-    "tags": ["למידה", "מסלולים", "הדרכה", "תכנית-לימודים"],
+    "tags": [
+      "למידה",
+      "מסלולים",
+      "הדרכה",
+      "תכנית-לימודים"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -163,16 +168,43 @@
     },
     {
       "type": "table",
-      "headers": ["אם אתם...", "עברו למסלול..."],
+      "headers": [
+        "אם אתם...",
+        "עברו למסלול..."
+      ],
       "rows": [
-        ["מפתח/ת (Junior/Mid/Senior)", "מסלולים למפתחים"],
-        ["מנהל/ת מוצר או אנליסט/ית", "מסלול למנהלי מוצר"],
-        ["ארכיטקט/ית טכנולוגי/ת", "מסלול לארכיטקטים"],
-        ["מעצב/ת UX/UI", "מסלול למעצבים"],
-        ["בודק/ת תוכנה (QA)", "מסלול לבודקי תוכנה"],
-        ["מנהל/ת פרויקטים / סקראם מאסטר", "מסלול למנהלי פרויקטים"],
-        ["מנהל/ת בכיר/ה (CTO, VP)", "מסלול למנהלים בכירים"],
-        ["עובד/ת בצוות שמאמץ BMAD", "מסלול לצוותים"]
+        [
+          "מפתח/ת (Junior/Mid/Senior)",
+          "מסלולים למפתחים"
+        ],
+        [
+          "מנהל/ת מוצר או אנליסט/ית",
+          "מסלול למנהלי מוצר"
+        ],
+        [
+          "ארכיטקט/ית טכנולוגי/ת",
+          "מסלול לארכיטקטים"
+        ],
+        [
+          "מעצב/ת UX/UI",
+          "מסלול למעצבים"
+        ],
+        [
+          "בודק/ת תוכנה (QA)",
+          "מסלול לבודקי תוכנה"
+        ],
+        [
+          "מנהל/ת פרויקטים / סקראם מאסטר",
+          "מסלול למנהלי פרויקטים"
+        ],
+        [
+          "מנהל/ת בכיר/ה (CTO, VP)",
+          "מסלול למנהלים בכירים"
+        ],
+        [
+          "עובד/ת בצוות שמאמץ BMAD",
+          "מסלול לצוותים"
+        ]
       ]
     },
     {
@@ -223,7 +255,8 @@
     },
     {
       "type": "text",
-      "content": "**למי:** מפתחים עם 0-2 שנות ניסיון או מי שעובר קריירה לפיתוח"
+      "content": "**למי:** מפתחים עם 0-2 שנות ניסיון או מי שעובר קריירה לפיתוח",
+      "markdown": true
     },
     {
       "type": "text",
@@ -235,15 +268,18 @@
       "items": [
         {
           "title": "שלב 1: יסודות (3 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו את BMAD\n- הריצו את workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - חלק 1א (מבוא)\n- הכירו את BMAD Master\n\n**יום 3:**\n- קראו: מדריך למפתחים (חלק 1)\n- הכירו את Amelia (Dev Agent)\n- נסו פקודה פשוטה: *create-story"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו את BMAD\n- הריצו את workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - חלק 1א (מבוא)\n- הכירו את BMAD Master\n\n**יום 3:**\n- קראו: מדריך למפתחים (חלק 1)\n- הכירו את Amelia (Dev Agent)\n- נסו פקודה פשוטה: *create-story",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד פיתוח (7 ימים)",
-          "content": "**שבוע 1:**\n- יום 4: למדו את dev-story workflow\n- יום 5: למדו את story-context workflow\n- יום 6: תרגלו - בנו Todo List פשוט\n- יום 7: למדו code-review workflow\n- יום 8: תרגלו - הוסיפו פיצ'ר למוצר קיים\n- יום 9: למדו story-done workflow\n- יום 10: פרויקט מסכם - בנו API פשוט מקצה לקצה"
+          "content": "**שבוע 1:**\n- יום 4: למדו את dev-story workflow\n- יום 5: למדו את story-context workflow\n- יום 6: תרגלו - בנו Todo List פשוט\n- יום 7: למדו code-review workflow\n- יום 8: תרגלו - הוסיפו פיצ'ר למוצר קיים\n- יום 9: למדו story-done workflow\n- יום 10: פרויקט מסכם - בנו API פשוט מקצה לקצה",
+          "markdown": true
         },
         {
           "title": "שלב 3: העמקה (2 שבועות)",
-          "content": "**שבוע 2-3:**\n- למדו: שיתוף פעולה עם PM ו-Architect\n- למדו: מדריך וורקפלואים - Development Flow\n- למדו: Best Practices\n- תרגלו: פרויקט אמיתי עם כל הוורקפלואים\n- למדו: Testing & Quality\n- תרגלו: הוסיפו בדיקות לפרויקט שלכם"
+          "content": "**שבוע 2-3:**\n- למדו: שיתוף פעולה עם PM ו-Architect\n- למדו: מדריך וורקפלואים - Development Flow\n- למדו: Best Practices\n- תרגלו: פרויקט אמיתי עם כל הוורקפלואים\n- למדו: Testing & Quality\n- תרגלו: הוסיפו בדיקות לפרויקט שלכם",
+          "markdown": true
         }
       ]
     },
@@ -261,7 +297,8 @@
     },
     {
       "type": "text",
-      "content": "**למי:** מפתחים עם 2-5 שנות ניסיון"
+      "content": "**למי:** מפתחים עם 2-5 שנות ניסיון",
+      "markdown": true
     },
     {
       "type": "text",
@@ -273,15 +310,18 @@
       "items": [
         {
           "title": "שלב 1: יסודות מהירים (1 יום)",
-          "content": "**יום 1 (4 שעות):**\n- קראו: התחלה מהירה (15 דק')\n- התקינו BMAD\n- קראו: מדריך למפתחים\n- הריצו workflow-init\n- הריצו dev-story על פרויקט קיים"
+          "content": "**יום 1 (4 שעות):**\n- קראו: התחלה מהירה (15 דק')\n- התקינו BMAD\n- קראו: מדריך למפתחים\n- הריצו workflow-init\n- הריצו dev-story על פרויקט קיים",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד (5 ימים)",
-          "content": "**שבוע 1:**\n- יום 2: למדו Development Flow מקצה לקצה\n- יום 3: למדו שיתוף פעולה עם Architect\n- יום 4: למדו solutioning-gate-check\n- יום 5: תרגלו - פיתוח פיצ'ר מורכב\n- יום 6: למדו Testing & Quality"
+          "content": "**שבוע 1:**\n- יום 2: למדו Development Flow מקצה לקצה\n- יום 3: למדו שיתוף פעולה עם Architect\n- יום 4: למדו solutioning-gate-check\n- יום 5: תרגלו - פיתוח פיצ'ר מורכב\n- יום 6: למדו Testing & Quality",
+          "markdown": true
         },
         {
           "title": "שלב 3: מתקדם (1 שבוע)",
-          "content": "**שבוע 2:**\n- למדו: CIS (Cross-Integration Scenarios)\n- למדו: Architecture והשפעה על קוד\n- תרגלו: הובלת פיצ'ר מקצה לקצה\n- למדו: Best Practices מתקדמות\n- תרגלו: mentoring למפתח Junior"
+          "content": "**שבוע 2:**\n- למדו: CIS (Cross-Integration Scenarios)\n- למדו: Architecture והשפעה על קוד\n- תרגלו: הובלת פיצ'ר מקצה לקצה\n- למדו: Best Practices מתקדמות\n- תרגלו: mentoring למפתח Junior",
+          "markdown": true
         }
       ]
     },
@@ -299,7 +339,8 @@
     },
     {
       "type": "text",
-      "content": "**למי:** מפתחים בכירים ו-Tech Leads עם 5+ שנות ניסיון"
+      "content": "**למי:** מפתחים בכירים ו-Tech Leads עם 5+ שנות ניסיון",
+      "markdown": true
     },
     {
       "type": "text",
@@ -315,11 +356,13 @@
         },
         {
           "title": "שלב 2: ממוקד Leadership (3 ימים)",
-          "content": "**ימים 1-3:**\n- למדו: Architecture workflow\n- למדו: Tech Spec workflow\n- למדו: Solutioning Gate Check\n- למדו: Code Review מקצועי\n- למדו: CIS - שילוב אגנטים"
+          "content": "**ימים 1-3:**\n- למדו: Architecture workflow\n- למדו: Tech Spec workflow\n- למדו: Solutioning Gate Check\n- למדו: Code Review מקצועי\n- למדו: CIS - שילוב אגנטים",
+          "markdown": true
         },
         {
           "title": "שלב 3: ארכיטקטורה וליווי צוות (4 ימים)",
-          "content": "**ימים 4-7:**\n- למדו: מדריך לארכיטקטים\n- למדו: Best Practices ל-Tech Leads\n- תרגלו: הובלת Epic מקצה לקצה\n- למדו: ליווי צוות במעבר ל-BMAD\n- תרגלו: Setup BMAD לפרויקט חברה"
+          "content": "**ימים 4-7:**\n- למדו: מדריך לארכיטקטים\n- למדו: Best Practices ל-Tech Leads\n- תרגלו: הובלת Epic מקצה לקצה\n- למדו: ליווי צוות במעבר ל-BMAD\n- תרגלו: Setup BMAD לפרויקט חברה",
+          "markdown": true
         }
       ]
     },
@@ -340,22 +383,26 @@
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 2 שבועות"
+      "content": "**משך זמן:** 2 שבועות",
+      "markdown": true
     },
     {
       "type": "accordion",
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n- הריצו workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - מבוא + PM\n- הכירו את John (PM Agent)"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n- הריצו workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - מבוא + PM\n- הכירו את John (PM Agent)",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד PM (7 ימים)",
-          "content": "**שבוע 1:**\n- יום 3: למדו product-brief workflow\n- יום 4: למדו research workflow\n- יום 5: תרגלו - כתבו בריף למוצר\n- יום 6: למדו PRD workflow\n- יום 7: למדו create-epics-and-stories\n- יום 8: תרגלו - הגדירו Epic + Stories\n- יום 9: למדו story-ready workflow"
+          "content": "**שבוע 1:**\n- יום 3: למדו product-brief workflow\n- יום 4: למדו research workflow\n- יום 5: תרגלו - כתבו בריף למוצר\n- יום 6: למדו PRD workflow\n- יום 7: למדו create-epics-and-stories\n- יום 8: תרגלו - הגדירו Epic + Stories\n- יום 9: למדו story-ready workflow",
+          "markdown": true
         },
         {
           "title": "שלב 3: שיתוף פעולה (5 ימים)",
-          "content": "**שבוע 2:**\n- יום 10: למדו שיתוף פעולה עם Architect\n- יום 11: למדו שיתוף פעולה עם UX Designer\n- יום 12: למדו Sprint Planning\n- יום 13: למדו Retrospective workflow\n- יום 14: תרגלו - נהלו מוצר מקצה לקצה"
+          "content": "**שבוע 2:**\n- יום 10: למדו שיתוף פעולה עם Architect\n- יום 11: למדו שיתוף פעולה עם UX Designer\n- יום 12: למדו Sprint Planning\n- יום 13: למדו Retrospective workflow\n- יום 14: תרגלו - נהלו מוצר מקצה לקצה",
+          "markdown": true
         }
       ]
     },
@@ -376,22 +423,26 @@
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 2 שבועות"
+      "content": "**משך זמן:** 2 שבועות",
+      "markdown": true
     },
     {
       "type": "accordion",
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - Architect\n- הכירו את Sarah (Architect Agent)\n- הריצו workflow-init"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - Architect\n- הכירו את Sarah (Architect Agent)\n- הריצו workflow-init",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד ארכיטקטורה (7 ימים)",
-          "content": "**שבוע 1:**\n- יום 3: למדו architecture workflow\n- יום 4: למדו tech-spec workflow\n- יום 5: תרגלו - תכננו ארכיטקטורה לפרויקט\n- יום 6: למדו epic-tech-context\n- יום 7: למדו solutioning-gate-check\n- יום 8: למדו document-project (brownfield)\n- יום 9: תרגלו - סקרו פרויקט קיים"
+          "content": "**שבוע 1:**\n- יום 3: למדו architecture workflow\n- יום 4: למדו tech-spec workflow\n- יום 5: תרגלו - תכננו ארכיטקטורה לפרויקט\n- יום 6: למדו epic-tech-context\n- יום 7: למדו solutioning-gate-check\n- יום 8: למדו document-project (brownfield)\n- יום 9: תרגלו - סקרו פרויקט קיים",
+          "markdown": true
         },
         {
           "title": "שלב 3: מתקדם (5 ימים)",
-          "content": "**שבוע 2:**\n- יום 10: למדו CIS - שיתוף פעולה עם PM\n- יום 11: למדו Code Review ארכיטקטוני\n- יום 12: למדו Best Practices לארכיטקטים\n- יום 13: תרגלו - הובלת ארכיטקטורה לפרויקט\n- יום 14: למדו ליווי מפתחים בהחלטות ארכיטקטוניות"
+          "content": "**שבוע 2:**\n- יום 10: למדו CIS - שיתוף פעולה עם PM\n- יום 11: למדו Code Review ארכיטקטוני\n- יום 12: למדו Best Practices לארכיטקטים\n- יום 13: תרגלו - הובלת ארכיטקטורה לפרויקט\n- יום 14: למדו ליווי מפתחים בהחלטות ארכיטקטוניות",
+          "markdown": true
         }
       ]
     },
@@ -412,22 +463,26 @@
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 10 ימים"
+      "content": "**משך זמן:** 10 ימים",
+      "markdown": true
     },
     {
       "type": "accordion",
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - UX Designer\n- הכירו את Sally (UX Designer Agent)\n- הריצו workflow-init"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - UX Designer\n- הכירו את Sally (UX Designer Agent)\n- הריצו workflow-init",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד עיצוב (5 ימים)",
-          "content": "**שבוע 1:**\n- יום 3: למדו create-ux-design workflow\n- יום 4: למדו research workflow\n- יום 5: תרגלו - עשו מחקר משתמשים\n- יום 6: תרגלו - צרו wireframes\n- יום 7: תרגלו - צרו Design System"
+          "content": "**שבוע 1:**\n- יום 3: למדו create-ux-design workflow\n- יום 4: למדו research workflow\n- יום 5: תרגלו - עשו מחקר משתמשים\n- יום 6: תרגלו - צרו wireframes\n- יום 7: תרגלו - צרו Design System",
+          "markdown": true
         },
         {
           "title": "שלב 3: שיתוף פעולה (3 ימים)",
-          "content": "**שבוע 2:**\n- יום 8: למדו שיתוף פעולה עם PM\n- יום 9: למדו מסירת מפרט למפתחים\n- יום 10: תרגלו - פרויקט עיצוב מקצה לקצה"
+          "content": "**שבוע 2:**\n- יום 8: למדו שיתוף פעולה עם PM\n- יום 9: למדו מסירת מפרט למפתחים\n- יום 10: תרגלו - פרויקט עיצוב מקצה לקצה",
+          "markdown": true
         }
       ]
     },
@@ -448,22 +503,26 @@
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 10 ימים"
+      "content": "**משך זמן:** 10 ימים",
+      "markdown": true
     },
     {
       "type": "accordion",
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - TEA\n- הכירו את Murat (Test Architect Expert)\n- הריצו workflow-init"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - TEA\n- הכירו את Murat (Test Architect Expert)\n- הריצו workflow-init",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד בדיקות (5 ימים)",
-          "content": "**שבוע 1:**\n- יום 3: למדו Testing & Quality workflows\n- יום 4: למדו Master Test Plan\n- יום 5: תרגלו - צרו תוכנית בדיקה\n- יום 6: למדו Test Case Generation\n- יום 7: תרגלו - כתבו תרחישי בדיקה"
+          "content": "**שבוע 1:**\n- יום 3: למדו Testing & Quality workflows\n- יום 4: למדו Master Test Plan\n- יום 5: תרגלו - צרו תוכנית בדיקה\n- יום 6: למדו Test Case Generation\n- יום 7: תרגלו - כתבו תרחישי בדיקה",
+          "markdown": true
         },
         {
           "title": "שלב 3: אוטומציה (3 ימים)",
-          "content": "**שבוע 2:**\n- יום 8: למדו Test Automation\n- יום 9: למדו שיתוף פעולה עם Dev\n- יום 10: תרגלו - בדיקות מקצה לקצה"
+          "content": "**שבוע 2:**\n- יום 8: למדו Test Automation\n- יום 9: למדו שיתוף פעולה עם Dev\n- יום 10: תרגלו - בדיקות מקצה לקצה",
+          "markdown": true
         }
       ]
     },
@@ -484,22 +543,26 @@
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 10 ימים"
+      "content": "**משך זמן:** 10 ימים",
+      "markdown": true
     },
     {
       "type": "accordion",
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - SM\n- הכירו את Bob (Scrum Master Agent)\n- הריצו workflow-init"
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - SM\n- הכירו את Bob (Scrum Master Agent)\n- הריצו workflow-init",
+          "markdown": true
         },
         {
           "title": "שלב 2: ממוקד ניהול (5 ימים)",
-          "content": "**שבוע 1:**\n- יום 3: למדו sprint-planning workflow\n- יום 4: למדו backlog management\n- יום 5: תרגלו - תכננו ספרינט\n- יום 6: למדו workflow-status\n- יום 7: למדו retrospective workflow"
+          "content": "**שבוע 1:**\n- יום 3: למדו sprint-planning workflow\n- יום 4: למדו backlog management\n- יום 5: תרגלו - תכננו ספרינט\n- יום 6: למדו workflow-status\n- יום 7: למדו retrospective workflow",
+          "markdown": true
         },
         {
           "title": "שלב 3: ניהול מתקדם (3 ימים)",
-          "content": "**שבוע 2:**\n- יום 8: למדו correct-course workflow\n- יום 9: למדו הרמת חסמים\n- יום 10: תרגלו - ניהול פרויקט מקצה לקצה"
+          "content": "**שבוע 2:**\n- יום 8: למדו correct-course workflow\n- יום 9: למדו הרמת חסמים\n- יום 10: תרגלו - ניהול פרויקט מקצה לקצה",
+          "markdown": true
         }
       ]
     },
@@ -520,11 +583,13 @@
     },
     {
       "type": "text",
-      "content": "**למי:** צוות שלם שמאמץ BMAD ביחד"
+      "content": "**למי:** צוות שלם שמאמץ BMAD ביחד",
+      "markdown": true
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 3 שבועות"
+      "content": "**משך זמן:** 3 שבועות",
+      "markdown": true
     },
     {
       "type": "heading",
@@ -594,11 +659,13 @@
     },
     {
       "type": "text",
-      "content": "**למי:** CTO, VP R&D, מנהלי הנדסה בכירים"
+      "content": "**למי:** CTO, VP R&D, מנהלי הנדסה בכירים",
+      "markdown": true
     },
     {
       "type": "text",
-      "content": "**משך זמן:** 5 ימים"
+      "content": "**משך זמן:** 5 ימים",
+      "markdown": true
     },
     {
       "type": "accordion",
@@ -711,12 +778,27 @@
     },
     {
       "type": "table",
-      "headers": ["Milestone", "אתם מוכנים כש..."],
+      "headers": [
+        "Milestone",
+        "אתם מוכנים כש..."
+      ],
       "rows": [
-        ["שלב 1 הושלם", "אתם מבינים מה זה אגנטים ווורקפלואים"],
-        ["שלב 2 הושלם", "אתם יכולים לפתח Story מתחילה לסוף עם Amelia"],
-        ["שלב 3 הושלם", "אתם יכולים להוביל Epic ולעבוד עם אגנטים אחרים"],
-        ["מקצועיים", "אתם מלמדים אחרים ויוצרים best practices"]
+        [
+          "שלב 1 הושלם",
+          "אתם מבינים מה זה אגנטים ווורקפלואים"
+        ],
+        [
+          "שלב 2 הושלם",
+          "אתם יכולים לפתח Story מתחילה לסוף עם Amelia"
+        ],
+        [
+          "שלב 3 הושלם",
+          "אתם יכולים להוביל Epic ולעבוד עם אגנטים אחרים"
+        ],
+        [
+          "מקצועיים",
+          "אתם מלמדים אחרים ויוצרים best practices"
+        ]
       ]
     },
     {
@@ -727,12 +809,27 @@
     },
     {
       "type": "table",
-      "headers": ["Milestone", "אתם מוכנים כש..."],
+      "headers": [
+        "Milestone",
+        "אתם מוכנים כש..."
+      ],
       "rows": [
-        ["שלב 1 הושלם", "אתם מבינים את המודל של BMAD"],
-        ["שלב 2 הושלם", "אתם יכולים לכתוב PRD ולהגדיר Stories עם John"],
-        ["שלב 3 הושלם", "אתם יכולים לנהל מוצר מקצה לקצה עם כל האגנטים"],
-        ["מקצועיים", "אתם מובילים אימוץ BMAD בארגון"]
+        [
+          "שלב 1 הושלם",
+          "אתם מבינים את המודל של BMAD"
+        ],
+        [
+          "שלב 2 הושלם",
+          "אתם יכולים לכתוב PRD ולהגדיר Stories עם John"
+        ],
+        [
+          "שלב 3 הושלם",
+          "אתם יכולים לנהל מוצר מקצה לקצה עם כל האגנטים"
+        ],
+        [
+          "מקצועיים",
+          "אתם מובילים אימוץ BMAD בארגון"
+        ]
       ]
     },
     {
@@ -825,4 +922,3 @@
     "best-practices"
   ]
 }
-
