--- a/src/content/locale/he/guides/roles/ux-designers.json
+++ b/src/content/locale/he/guides/roles/ux-designers.json
@@ -8,7 +8,16 @@
     "difficulty": "intermediate",
     "estimatedMinutes": 40,
     "icon": "Palette",
-    "tags": ["עיצוב", "UX", "UI", "Sally", "חוויית משתמש", "design", "wireframes", "prototypes"],
+    "tags": [
+      "עיצוב",
+      "UX",
+      "UI",
+      "Sally",
+      "חוויית משתמש",
+      "design",
+      "wireframes",
+      "prototypes"
+    ],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -1099,7 +1108,7 @@
     {
       "type": "text",
       "content": "**איך לעשות:**\n• צרו User Personas מבוססות נתונים\n• בצעו User Interviews\n• הריצו Usability Tests\n• נתחו Analytics\n• דברו עם Support/Sales",
-      "markdown": false
+      "markdown": true
     },
     {
       "type": "heading",
@@ -1110,7 +1119,7 @@
     {
       "type": "text",
       "content": "**אל תקפצו ישר ל-High-Fidelity!**\n\n**הסדר הנכון:**\n1. Sketches (נייר + עיפרון)\n2. Low-Fidelity Wireframes (מבנה)\n3. Mid-Fidelity Wireframes (תוכן + layout)\n4. High-Fidelity Mockups (עיצוב סופי)\n5. Interactive Prototype (אינטראקציות)\n\n**למה?** כל שלב מאפשר לקבל feedback מהר יותר וזול יותר מהשלב הבא.",
-      "markdown": false
+      "markdown": true
     },
     {
       "type": "heading",
@@ -1121,7 +1130,7 @@
     {
       "type": "text",
       "content": "**בנו Design System מהר ככל האפשר:**\n\n• הגדירו Colors, Typography, Spacing\n• צרו Component Library\n• תעדו Patterns\n• שתפו עם המפתחים\n• עדכנו בהתמדה",
-      "markdown": false
+      "markdown": true
     },
     {
       "type": "callout",
@@ -1138,7 +1147,7 @@
     {
       "type": "text",
       "content": "**נגישות היא לא אופציה!**\n\n**Checklist:**\n• ניגודיות צבעים (WCAG AA minimum)\n• Keyboard Navigation\n• Screen Reader Support\n• Focus States ברורים\n• Error Messages תיאוריים\n• Alt Text לתמונות",
-      "markdown": false
+      "markdown": true
     },
     {
       "type": "heading",
@@ -1149,7 +1158,7 @@
     {
       "type": "text",
       "content": "**אל תחכו לסוף!**\n\n• בדקו Sketches עם עמיתים\n• בדקו Wireframes עם Stakeholders\n• בדקו Prototypes עם משתמשים אמיתיים\n• בצעו A/B Tests\n• נתחו User Behavior (Analytics)",
-      "markdown": false
+      "markdown": true
     },
     {
       "type": "callout",
@@ -1258,19 +1267,24 @@
       "variant": "ordered",
       "items": [
         {
-          "content": "**התקינו את BMAD** בפרויקט שלכם (אם עוד לא)"
+          "content": "**התקינו את BMAD** בפרויקט שלכם (אם עוד לא)",
+          "markdown": true
         },
         {
-          "content": "**הריצו create-ux-design** על feature אמיתי"
+          "content": "**הריצו create-ux-design** על feature אמיתי",
+          "markdown": true
         },
         {
-          "content": "**צרו User Flow** לפחות לתכונה אחת"
+          "content": "**צרו User Flow** לפחות לתכונה אחת",
+          "markdown": true
         },
         {
-          "content": "**עצבו Wireframes** עם עזרת Sally"
+          "content": "**עצבו Wireframes** עם עזרת Sally",
+          "markdown": true
         },
         {
-          "content": "**שתפו את הצוות** - הראו להם מה למדתם"
+          "content": "**שתפו את הצוות** - הראו להם מה למדתם",
+          "markdown": true
         }
       ]
     },
@@ -1360,4 +1374,3 @@
     }
   ]
 }
-
